--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -84,7 +84,7 @@ jobs:
         uses: google-github-actions/setup-gcloud@v0.2.0
         with:
           version: "latest"
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          TF_VAR_project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
