--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -84,7 +84,7 @@ jobs:
         uses: google-github-actions/setup-gcloud@v0.2.0
         with:
           version: "latest"
-          TF_VAR_project_id: ${{ secrets.GCP_PROJECT_ID }}
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
@@ -110,4 +110,7 @@ jobs:
           TF_VAR_postgres_password: ${{ secrets.DB_PASSWORD }}
           TF_VAR_postgres_username: ${{ secrets.DB_USER }}
           TF_VAR_instance_name: ${{ secrets.DB_NAME }}
+          TF_VAR_project_id: ${{ secrets.GCP_PROJECT_ID }}
+          TF_VAR_postgres_password: ${{ secrets.DB_PASSWORD }}
+          
         run: bash ./scripts/check_and_run_sql.sh $CONNECTION_NAME $USER $PASSWORD $DATABASE_NAME
