--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -52,11 +52,11 @@ jobs:
           TF_VAR_postgres_password: ${{ secrets.DB_PASSWORD }}
           TF_VAR_postgres_username: ${{ secrets.DB_USER }}
 
-      - name: Check and Run SQL Script
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: bash ./sql/check_and_run_sql.sh ${{ secrets.DB_CONNECTION_NAME }} ${{ secrets.DB_USER }} ${{ secrets.DB_PASSWORD }} ${{ secrets.DB_NAME }}
-        env:
-          CONNECTION_NAME: ${{ secrets.DB_CONNECTION_NAME }}
-          USER: ${{ secrets.DB_USER }}
-          PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DATABASE_NAME: ${{ secrets.DB_NAME }}
+      # - name: Check and Run SQL Script
+      #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      #   run: bash ./sql/check_and_run_sql.sh ${{ secrets.DB_CONNECTION_NAME }} ${{ secrets.DB_USER }} ${{ secrets.DB_PASSWORD }} ${{ secrets.DB_NAME }}
+      #   env:
+      #     CONNECTION_NAME: ${{ secrets.DB_CONNECTION_NAME }}
+      #     USER: ${{ secrets.DB_USER }}
+      #     PASSWORD: ${{ secrets.DB_PASSWORD }}
+      #     DATABASE_NAME: ${{ secrets.DB_NAME }}
