--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -38,19 +38,22 @@ jobs:
         run: terraform fmt -check
 
       - name: Terraform Plan
-        run: terraform plan
+        id: plan
+        run: |
+          terraform plan -out=tfplan
+          echo "::set-output name=has_changes::$(terraform plan -detailed-exitcode; echo $?)"
         env:
           TF_VAR_project_id: ${{ secrets.GCP_PROJECT_ID }}
           TF_VAR_postgres_password: ${{ secrets.DB_PASSWORD }}
           TF_VAR_postgres_username: ${{ secrets.DB_USER }}
-          # Adicione as variáveis abaixo se você quiser sobrescrever os valores padrão
+          # Adicione as variáveis abaixo se necessário
           # TF_VAR_techchallenge_pagamento_db_name: ${{ secrets.PAGAMENTO_DB_NAME }}
           # TF_VAR_techchallenge_producao_db_name: ${{ secrets.PRODUCAO_DB_NAME }}
           # TF_VAR_techchallenge_pedido_db_name: ${{ secrets.PEDIDO_DB_NAME }}
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve
+        if: steps.plan.outputs.has_changes == '2'
+        run: terraform apply -auto-approve tfplan
         env:
           TF_VAR_project_id: ${{ secrets.GCP_PROJECT_ID }}
           TF_VAR_postgres_password: ${{ secrets.DB_PASSWORD }}
