--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -38,30 +38,19 @@ jobs:
         run: terraform fmt -check
 
       - name: Terraform Plan
-        id: plan
-        run: |
-          terraform plan -out=tfplan
-          echo "TF_PLAN_EXIT_CODE=$?" >> $GITHUB_ENV
+        run: terraform plan
         env:
           TF_VAR_project_id: ${{ secrets.GCP_PROJECT_ID }}
           TF_VAR_postgres_password: ${{ secrets.DB_PASSWORD }}
           TF_VAR_postgres_username: ${{ secrets.DB_USER }}
-          # Adicione as variáveis abaixo se necessário
-          # TF_VAR_techchallenge_pagamento_db_name: ${{ secrets.PAGAMENTO_DB_NAME }}
-          # TF_VAR_techchallenge_producao_db_name: ${{ secrets.PRODUCAO_DB_NAME }}
-          # TF_VAR_techchallenge_pedido_db_name: ${{ secrets.PEDIDO_DB_NAME }}
 
       - name: Terraform Apply
-        if: env.TF_PLAN_EXIT_CODE == '2'
-        run: terraform apply -auto-approve tfplan
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve
         env:
           TF_VAR_project_id: ${{ secrets.GCP_PROJECT_ID }}
           TF_VAR_postgres_password: ${{ secrets.DB_PASSWORD }}
           TF_VAR_postgres_username: ${{ secrets.DB_USER }}
-          # Adicione as variáveis abaixo se necessário
-          # TF_VAR_techchallenge_pagamento_db_name: ${{ secrets.PAGAMENTO_DB_NAME }}
-          # TF_VAR_techchallenge_producao_db_name: ${{ secrets.PRODUCAO_DB_NAME }}
-          # TF_VAR_techchallenge_pedido_db_name: ${{ secrets.PEDIDO_DB_NAME }}
 
       # - name: Check and Run SQL Script
       #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
