--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -9,23 +9,22 @@ on:
       - main
 
 jobs:
-  terraform:
-    name: Terraform
+  deploy:
+    name: Deploy com Terraform
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Setup Google Cloud
+      - name: Configurar Google Cloud
         uses: google-github-actions/setup-gcloud@v0.2.0
         with:
-          version: "latest"
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
 
-      - name: Terraform Setup
+      - name: Configurar Terraform
         uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: "1.0.0"
@@ -34,33 +33,9 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
-      - name: Terraform Format
-        run: terraform fmt -check
-
       - name: Terraform Plan
-        id: plan
-        run: |
-          terraform plan -out=tfplan
-          terraform show -json tfplan > plan.json
-          cat plan.json
-        env:
-          TF_VAR_project_id: ${{ secrets.GCP_PROJECT_ID }}
-          TF_VAR_postgres_password: ${{ secrets.DB_PASSWORD }}
-          TF_VAR_postgres_username: ${{ secrets.DB_USER }}
+        run: terraform plan
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve tfplan
-        env:
-          TF_VAR_project_id: ${{ secrets.GCP_PROJECT_ID }}
-          TF_VAR_postgres_password: ${{ secrets.DB_PASSWORD }}
-          TF_VAR_postgres_username: ${{ secrets.DB_USER }}
-
-      # - name: Check and Run SQL Script
-      #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      #   run: bash ./sql/check_and_run_sql.sh ${{ secrets.DB_CONNECTION_NAME }} ${{ secrets.DB_USER }} ${{ secrets.DB_PASSWORD }} ${{ secrets.DB_NAME }}
-      #   env:
-      #     CONNECTION_NAME: ${{ secrets.DB_CONNECTION_NAME }}
-      #     USER: ${{ secrets.DB_USER }}
-      #     PASSWORD: ${{ secrets.DB_PASSWORD }}
-      #     DATABASE_NAME: ${{ secrets.DB_NAME }}
+        run: terraform apply -auto-approve
